--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 .action-icons{
   height: 25px;
   width: 25px;
-  margin-right: 10px;
+  margin: 10px 10px 0 0;
 }
 
 .action-icons:hover{
